[package]
name = "toy-payment-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.142", features = ["derive"] }
thiserror = "1.0.32"
